--- a/ai/text_summarization/dotnet/console_app/textsummarizeconsole/textsummarizeconsole.csproj
+++ b/ai/text_summarization/dotnet/console_app/textsummarizeconsole/textsummarizeconsole.csproj
@@ -10,8 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.3.0-beta.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
